--- a/environment.yml
+++ b/environment.yml
@@ -8,6 +8,7 @@ channels:
 dependencies:
   - captum=0.2
   - cudatoolkit=10.2
+  - h5py
   - jupyterlab=2.2
   - jupyterlab-git=0.20
   - nodejs=14
@@ -16,7 +17,11 @@ dependencies:
     - -r file:requirements.txt
   - python=3.8
   - pytorch=1.7
-  - tensorboard=2.3
+  - pytorch-lightning
+  - scikit-image
+  - scikit-learn
+  - tensorboard=2.2
   - torchaudio=0.7
   - torchtext=0.8
   - torchvision=0.8
+  - tqdm
